z-index modal-content to fix bug

--- a/app/assets/stylesheets/eventCards.scss
+++ b/app/assets/stylesheets/eventCards.scss
@@ -332,7 +332,7 @@
 }
 
 
-.modal{
+.modal-contnent{
   z-index: 1000!important;
 }
 
